doc/logfile.txt
Class documentation
<---- javadoc command: ---->
D:\Koku\Aplikasi\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
D:\Koku\Aplikasi\lib\bluejcore.jar;D:\Koku\Aplikasi\lib\junit-4.11.jar;D:\Koku\Aplikasi\lib\hamcrest-core-1.3.jar;D:\Koku\Aplikasi\lib\lang-stride.jar;D:\Koku\Aplikasi\lib\javafx\lib\javafx.base.jar;D:\Koku\Aplikasi\lib\javafx\lib\javafx.controls.jar;D:\Koku\Aplikasi\lib\javafx\lib\javafx.fxml.jar;D:\Koku\Aplikasi\lib\javafx\lib\javafx.graphics.jar;D:\Koku\Aplikasi\lib\javafx\lib\javafx.media.jar;D:\Koku\Aplikasi\lib\javafx\lib\javafx.properties.jar;D:\Koku\Aplikasi\lib\javafx\lib\javafx.swing.jar;D:\Koku\Aplikasi\lib\javafx\lib\javafx.web.jar;C:\Users\ASUS\java\jfood
-d
C:\Users\ASUS\java\jfood\doc
-encoding
UTF-8
-charset
UTF-8
C:\Users\ASUS\java\jfood\Invoice.java
<---- end of javadoc command ---->
Loading source file C:\Users\ASUS\java\jfood\Invoice.java...
Constructing Javadoc information...
C:\Users\ASUS\java\jfood\Invoice.java:12: error: cannot find symbol
    private Calendar date;
            ^
  symbol:   class Calendar
  location: class Invoice
C:\Users\ASUS\java\jfood\Invoice.java:26: error: cannot find symbol
    public Invoice(int id, Food Food, Calendar date, Customer customer,  InvoiceStatus invoiceStatus)
                                      ^
  symbol:   class Calendar
  location: class Invoice
2 errors
